--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -347,6 +347,7 @@
     <Compile Include="World\Abilities\Buffs\BuffInterface.cs" />
     <Compile Include="World\Battlefronts\Keeps\KeepDoor.cs" />
     <Compile Include="World\Battlefronts\Keeps\KeepNpcCreature.cs" />
+    <Compile Include="World\Objects\CreatureState.cs" />
     <Compile Include="World\Objects\Instances\Bilerot Burrow\SimpleBartholomeustheSickly.cs" />
     <Compile Include="World\Objects\Instances\Bilerot Burrow\SimpleSsrydianMorbidae.cs" />
     <Compile Include="World\Objects\Instances\Bilerot Burrow\SimpleTheBileLord.cs" />
@@ -367,6 +368,7 @@
     <Compile Include="World\Objects\Instances\Bastion Stairs\SimpleThar%27lgnan.cs" />
     <Compile Include="World\Objects\Instances\The Lost Vale\SimpleTheDeamonicBeast.cs" />
     <Compile Include="World\Objects\Instances\RemovedBosses\SimpleTonragThunderborn.cs" />
+    <Compile Include="World\Objects\NPCAbility.cs" />
     <Compile Include="World\Objects\RVRArea.cs" />
     <Compile Include="World\Scripting\BasicScript.cs" />
     <Compile Include="World\Scripting\BehaviorLib.cs" />
