--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -279,6 +279,7 @@
     <Compile Include="World\AI\SimpleLVHealerBrain.cs" />
     <Compile Include="World\Auction\AuctionHouse.cs" />
     <Compile Include="World\Battlefronts\AAOTracker.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\GuildClaimObjective.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\BattlefieldObjective.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\DeploymentReason.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\EnemyKeepLocationComparitor.cs" />
