--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -289,6 +289,7 @@
     <Compile Include="World\Battlefronts\Apocalypse\CampaignObjectiveStateMachine.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\PlayerRewardOptions.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\SiegeManager.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\RamSpawnFlagComparitor.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\SiegeMerchantLocationComparitor.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\SiegeTracker.cs" />
     <Compile Include="World\Battlefronts\Bounty\BountyException.cs" />
