--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -272,6 +272,8 @@
     <Compile Include="World\Abilities\RunicBlessingsHandler.cs" />
     <Compile Include="World\AI\ABrain.cs" />
     <Compile Include="World\AI\ChosenBrain.cs" />
+    <Compile Include="World\AI\RunepriestBrain.cs" />
+    <Compile Include="World\AI\RangedBrain.cs" />
     <Compile Include="World\AI\ZealotBrain.cs" />
     <Compile Include="World\AI\MarauderBrain.cs" />
     <Compile Include="World\AI\AgressiveBrain.cs" />
