--- a/HonorUpdater/App.config
+++ b/HonorUpdater/App.config
@@ -1,9 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
   <appSettings>
-  <add key="WAR.ConnectionString" value="Server=127.0.0.1;Database=war_characters;Uid=root;Pwd=thetrooper;" />
+  <add key="WAR.ConnectionString" value="Server=127.0.0.1;Database=war_characters;Uid=root;Pwd=thetrooper;"/>
   </appSettings>
 </configuration>
