--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WorldServer</RootNamespace>
     <AssemblyName>WorldServer</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
@@ -273,9 +273,13 @@
     <Compile Include="World\Abilities\RunicBlessingsHandler.cs" />
     <Compile Include="World\AI\ABrain.cs" />
     <Compile Include="World\AI\BlackguardBrain.cs" />
+    <Compile Include="World\AI\SlayerBrain.cs" />
+    <Compile Include="World\AI\WitchHunterBrain.cs" />
+    <Compile Include="World\AI\WitchElfBrain.cs" />
     <Compile Include="World\AI\IronBreakerBrain.cs" />
     <Compile Include="World\AI\KnightBrain.cs" />
     <Compile Include="World\AI\ChosenBrain.cs" />
+    <Compile Include="World\AI\ChoppaBrain.cs" />
     <Compile Include="World\AI\RunepriestBrain.cs" />
     <Compile Include="World\AI\RangedBrain.cs" />
     <Compile Include="World\AI\ZealotBrain.cs" />
