--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -499,48 +499,107 @@
     <Compile Include="World\Objects\AdvancedCreature.cs" />
     <Compile Include="World\Objects\CreatureState.cs" />
     <Compile Include="World\Objects\DynamicVendor.cs" />
+    <Compile Include="World\Objects\Instances\Bloodwrought Enclave\SimpleBarakustheGodslayer.cs" />
+    <Compile Include="World\Objects\Instances\Bloodwrought Enclave\SimpleCuliusEmbervine.cs" />
+    <Compile Include="World\Objects\Instances\Bloodwrought Enclave\SimpleKorthuktheRaging.cs" />
+    <Compile Include="World\Objects\Instances\Bloodwrought Enclave\SimpleSarlothBloodtouched.cs" />
     <Compile Include="World\Objects\Instances\Bilerot Burrow\SimpleBartholomeustheSickly.cs" />
     <Compile Include="World\Objects\Instances\Bilerot Burrow\SimpleSsrydianMorbidae.cs" />
     <Compile Include="World\Objects\Instances\Bilerot Burrow\SimpleTheBileLord.cs" />
-    <Compile Include="World\Objects\Instances\Bloodwrought Enclave\SimpleBarakustheGodslayer.cs" />
-    <Compile Include="World\Objects\Instances\Bloodwrought Enclave\SimpleKorthuktheRaging.cs" />
-    <Compile Include="World\Objects\Instances\Bloodwrought Enclave\SimpleSarlothBloodtouched.cs" />
-    <Compile Include="World\Objects\Instances\Bloodwrought Enclave\SimpleCuliusEmbervine.cs" />
+    <Compile Include="World\Objects\Instances\The Lost Vale\SimpleButcherGutbeater.cs" />
+    <Compile Include="World\Objects\Instances\The Lost Vale\SimpleChulEarthkeeper.cs" />
+    <Compile Include="World\Objects\Instances\The Lost Vale\SimpleGoraktheAncient.cs" />
+    <Compile Include="World\Objects\Instances\The Lost Vale\SimpleLargtheDevourer.cs" />
+    <Compile Include="World\Objects\Instances\The Lost Vale\SimpleNKariKeeperofSecrets.cs" />
+    <Compile Include="World\Objects\Instances\The Lost Vale\SimpleSarthaintheWorldbearer.cs" />
+    <Compile Include="World\Objects\Instances\The Lost Vale\SimpleSechartheDarkpromiseChieftain.cs" />
+    <Compile Include="World\Objects\Instances\The Lost Vale\SimpleTheDarkpromiseBeast2.cs" />
+    <Compile Include="World\Objects\Instances\The Lost Vale\SimpleZaarthePainseeker.cs" />
+    <Compile Include="World\Objects\Instances\Tombs\SimpleBennuApeht.cs" />
+    <Compile Include="World\Objects\Instances\Tombs\SimpleHapuShebikef.cs" />
+    <Compile Include="World\Objects\Instances\Tombs\SimpleSaaKhasef.cs" />
+    <Compile Include="World\Objects\Instances\Tombs\SimpleTsekaniHeyafa.cs" />
+    <Compile Include="World\Objects\Instances\TomboftheVultureLord\SimpleAkiltheShrewd.cs" />
+    <Compile Include="World\Objects\Instances\TomboftheVultureLord\SimpleHandofUalatp.cs" />
+    <Compile Include="World\Objects\Instances\TomboftheVultureLord\SimpleHierophantEutrata.cs" />
+    <Compile Include="World\Objects\Instances\TomboftheVultureLord\SimpleHighPriestHerakh1.cs" />
+    <Compile Include="World\Objects\Instances\TomboftheVultureLord\SimpleHighPriestHerakh2.cs" />
+    <Compile Include="World\Objects\Instances\TomboftheVultureLord\SimpleHighPriestHerakh3.cs" />
+    <Compile Include="World\Objects\Instances\TomboftheVultureLord\SimpleJahitheIndignant.cs" />
+    <Compile Include="World\Objects\Instances\TomboftheVultureLord\SimpleKingAmenemhetumtheVultureLord.cs" />
+    <Compile Include="World\Objects\Instances\TomboftheVultureLord\SimpleTumainitheHopeless.cs" />
+    <Compile Include="World\Objects\Instances\TomboftheVultureLord\SimpleUsiriansKeeper.cs" />
+    <Compile Include="World\Objects\Instances\WarpbladeTunnels1\SimpleSkivRedwarp.cs" />
+    <Compile Include="World\Objects\Instances\WarpbladeTunnels1\SimpleWarlockPeenk.cs" />
+    <Compile Include="World\Objects\Instances\SigmarCrypts\SimpleArchLectorVerrimus.cs" />
+    <Compile Include="World\Objects\Instances\SigmarCrypts\SimpleArchLectorZakarai.cs" />
+    <Compile Include="World\Objects\Instances\SigmarCrypts\SimpleCryptwebQueen.cs" />
+    <Compile Include="World\Objects\Instances\SigmarCrypts\SimpleNecromancerMalcidious.cs" />
+    <Compile Include="World\Objects\Instances\SigmarCrypts\SimpleSeraphinePaleEye.cs" />
+    <Compile Include="World\Objects\Instances\SigmarCrypts\SimpleSisterEudocia.cs" />
+    <Compile Include="World\Objects\Instances\SigmarCrypts\SimpleTheReaper.cs" />
+    <Compile Include="World\Objects\Instances\SigmarCrypts\SimpleTobiastheFallen.cs" />
+    <Compile Include="World\Objects\Instances\SacellumDungeonsSouthWingSacellum1\SimpleGoremane.cs" />
+    <Compile Include="World\Objects\Instances\SacellumDungeonsSouthWingSacellum1\SimpleSnaptailtheBreeder.cs" />
+    <Compile Include="World\Objects\Instances\SacellumDungeonsSouthWingSacellum1\SimpleViraxiltheBroken.cs" />
+    <Compile Include="World\Objects\Instances\TheSewersofAltdorfWing3Sewers\SimpleGoradiantheCreator.cs" />
+    <Compile Include="World\Objects\Instances\TheSewersofAltdorfWing3Sewers\SimpleMasterMoulderVitchek.cs" />
+    <Compile Include="World\Objects\Instances\Bastion Stairs\Zone165\SimpleKaarntheVanquisher.cs" />
+    <Compile Include="World\Objects\Instances\Bastion Stairs\Zone164\SimpleLordSlaurith.cs" />
+    <Compile Include="World\Objects\Instances\Bastion Stairs\Zone166\SimpleSkullLordVarIthrok.cs" />
+    <Compile Include="World\Objects\Instances\Bastion Stairs\Zone163\SimpleTharlgnan.cs" />
+    <Compile Include="World\Objects\Instances\SacellumDungeonsEastWingSacellum3\SimpleGhalmarRagehorn.cs" />
+    <Compile Include="World\Objects\Instances\SacellumDungeonsEastWingSacellum3\SimpleUzhaktheBetrayer.cs" />
+    <Compile Include="World\Objects\Instances\SacellumDungeonsEastWingSacellum3\SimpleVultheBloodchosen.cs" />
+    <Compile Include="World\Objects\Instances\SacellumDungeonsWestWingSacellum2\SimpleHoarfrost.cs" />
+    <Compile Include="World\Objects\Instances\SacellumDungeonsWestWingSacellum2\SimpleLorthThunderbelly.cs" />
+    <Compile Include="World\Objects\Instances\SacellumDungeonsWestWingSacellum2\SimpleSebcrawtheDiscarded.cs" />
+    <Compile Include="World\Objects\Instances\SacellumDungeonsWestWingSacellum2\SimpleSlorthThunderbelly.cs" />
+    <Compile Include="World\Objects\Instances\WarpbladeTunnels2\SimpleBrauk.cs" />
+    <Compile Include="World\Objects\Instances\WarpbladeTunnels2\SimpleGreySeerQuoltik.cs" />
+    <Compile Include="World\Objects\Instances\WarpbladeTunnels2\SimpleMasterMoulderSkrot.cs" />
+    <Compile Include="World\Objects\Instances\TheSewersofAltdorfWing2Sewers3\SimpleBulbousOne.cs" />
+    <Compile Include="World\Objects\Instances\TheSewersofAltdorfWing2Sewers3\SimpleProtFangchitter.cs" />
+    <Compile Include="World\Objects\Instances\TheSewersofAltdorfWing2Sewers3\SimpleVermerFangchitter.cs" />
+    <Compile Include="World\Objects\Instances\TheSewersofAltdorfWing1Sewers 2\SimpleKokritManEater.cs" />
+    <Compile Include="World\Objects\Instances\Mount Gunbad\Zone66\SimpleWightLordSolithex.cs" />
+    <Compile Include="World\Objects\Instances\Mount Gunbad\Zone65\SimpleArdtaFeed.cs" />
+    <Compile Include="World\Objects\Instances\Mount Gunbad\Zone64\SimpleMastaMixa.cs" />
+    <Compile Include="World\Objects\Instances\Mount Gunbad\Zone63\SimpleGlompdaSquigMasta.cs" />
+    <Compile Include="World\Objects\Instances\Hunter%27s Vale\SimpleSpiritofKurnous.cs" />
+    <Compile Include="World\Objects\Instances\Hunter%27s Vale\SimpleThananTreeLord.cs" />
+    <Compile Include="World\Objects\Instances\Hunter%27s Vale\SimpleTheCadaithaineLion.cs" />
     <Compile Include="World\Objects\Instances\TomboftheVultureLord\TOTVL.cs" />
     <Compile Include="World\Interfaces\LiveEventInterface.cs" />
     <Compile Include="World\Map\Occlusion.cs" />
-    <Compile Include="World\Objects\Instances\Bastion Stairs\SimpleKaarntheVanquisher.cs" />
-    <Compile Include="World\Objects\Instances\Bastion Stairs\SimpleLordSlaurith.cs" />
-    <Compile Include="World\Objects\Instances\Bastion Stairs\SimpleSkullLordVar%27Ithrok.cs" />
     <Compile Include="World\Objects\Instances\The Lost Vale\SimpleAhzranok.cs" />
     <Compile Include="World\Objects\Instances\The Lost Vale\SimpleDralel.cs" />
     <Compile Include="World\Objects\Instances\RemovedBosses\SimpleFulgurThunderborn.cs" />
     <Compile Include="World\Objects\Instances\The Lost Vale\SimpleHorgulul.cs" />
     <Compile Include="World\Objects\Instances\The Lost Vale\SimpleMalghorGreathorn.cs" />
-    <Compile Include="World\Objects\Instances\Bastion Stairs\SimpleThar%27lgnan.cs" />
     <Compile Include="World\Objects\Instances\The Lost Vale\SimpleTheDeamonicBeast.cs" />
     <Compile Include="World\Objects\Instances\RemovedBosses\SimpleTonragThunderborn.cs" />
     <Compile Include="World\Objects\NPCAbility.cs" />
     <Compile Include="World\Objects\RVRArea.cs" />
     <Compile Include="World\Scripting\BasicScript.cs" />
     <Compile Include="World\Scripting\BehaviorLib.cs" />
-    <Compile Include="World\Objects\Instances\AltdorfSewers3\AltdorfSewersWingIII.cs" />
-    <Compile Include="World\Objects\Instances\Gunbad\Arathremia.cs" />
-    <Compile Include="World\Objects\Instances\Gunbad\ArdtaFeed.cs" />
-    <Compile Include="World\Objects\Instances\Gunbad\BasicGunbad.cs" />
-    <Compile Include="World\Objects\Instances\Gunbad\BroodMotherSzikalax.cs" />
-    <Compile Include="World\Objects\Instances\Gunbad\ElderKizzig.cs" />
-    <Compile Include="World\Objects\Instances\Gunbad\FoulMoufdaUngry.cs" />
-    <Compile Include="World\Objects\Instances\Gunbad\GarrolaththePoxbearer.cs" />
-    <Compile Include="World\Objects\Instances\Gunbad\GlompDaSquigMasta.cs" />
-    <Compile Include="World\Objects\Instances\Gunbad\GriblikdaStinka.cs" />
-    <Compile Include="World\Objects\Instances\Gunbad\HeraldofSolithex.cs" />
-    <Compile Include="World\Objects\Instances\Gunbad\Logazor.cs" />
-    <Compile Include="World\Objects\Instances\Gunbad\MastaMixa.cs" />
-    <Compile Include="World\Objects\Instances\Gunbad\MastaWranglaGlix.cs" />
-    <Compile Include="World\Objects\Instances\Gunbad\RedeyeBigOaf.cs" />
-    <Compile Include="World\Objects\Instances\Gunbad\BlazAndVelkyrrix.cs" />
-    <Compile Include="World\Objects\Instances\Gunbad\WightLordSolithex.cs" />
+    <Compile Include="World\Objects\Instances\TheSewersofAltdorfWing3Sewers\AltdorfSewers3\AltdorfSewersWingIII.cs" />
+    <Compile Include="World\Objects\Instances\Mount Gunbad\Gunbad\Arathremia.cs" />
+    <Compile Include="World\Objects\Instances\Mount Gunbad\Gunbad\ArdtaFeed.cs" />
+    <Compile Include="World\Objects\Instances\Mount Gunbad\Gunbad\BasicGunbad.cs" />
+    <Compile Include="World\Objects\Instances\Mount Gunbad\Gunbad\BroodMotherSzikalax.cs" />
+    <Compile Include="World\Objects\Instances\Mount Gunbad\Gunbad\ElderKizzig.cs" />
+    <Compile Include="World\Objects\Instances\Mount Gunbad\Gunbad\FoulMoufdaUngry.cs" />
+    <Compile Include="World\Objects\Instances\Mount Gunbad\Gunbad\GarrolaththePoxbearer.cs" />
+    <Compile Include="World\Objects\Instances\Mount Gunbad\Gunbad\GlompDaSquigMasta.cs" />
+    <Compile Include="World\Objects\Instances\Mount Gunbad\Gunbad\GriblikdaStinka.cs" />
+    <Compile Include="World\Objects\Instances\Mount Gunbad\Gunbad\HeraldofSolithex.cs" />
+    <Compile Include="World\Objects\Instances\Mount Gunbad\Gunbad\Logazor.cs" />
+    <Compile Include="World\Objects\Instances\Mount Gunbad\Gunbad\MastaMixa.cs" />
+    <Compile Include="World\Objects\Instances\Mount Gunbad\Gunbad\MastaWranglaGlix.cs" />
+    <Compile Include="World\Objects\Instances\Mount Gunbad\Gunbad\RedeyeBigOaf.cs" />
+    <Compile Include="World\Objects\Instances\Mount Gunbad\Gunbad\BlazAndVelkyrrix.cs" />
+    <Compile Include="World\Objects\Instances\Mount Gunbad\Gunbad\WightLordSolithex.cs" />
     <Compile Include="World\Scripting\Events\Halloween\BasicHalloween.cs" />
     <Compile Include="World\Scripting\Lairs\Beastlords\BasicBeastlord.cs" />
     <Compile Include="World\Scripting\Lairs\Beastlords\AllBeastlords.cs" />
