More WIP - mobs. 2 actions, same condition not firing

--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -407,6 +407,7 @@
     <Compile Include="World\AI\BrainType.cs" />
     <Compile Include="World\AI\BT\ChosenBehaviourTree.cs" />
     <Compile Include="World\AI\BossBrain.cs" />
+    <Compile Include="World\AI\HealerBrain.cs" />
     <Compile Include="World\AI\SlayerBrain.cs" />
     <Compile Include="World\AI\WitchHunterBrain.cs" />
     <Compile Include="World\AI\WitchElfBrain.cs" />
