--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -457,6 +457,7 @@
     <Compile Include="World\Battlefronts\Bounty\PlayerImpact.cs" />
     <Compile Include="World\Battlefronts\Bounty\ImpactMatrixManager.cs" />
     <Compile Include="World\Battlefronts\Bounty\RenownBandRVRObjectiveTick.cs" />
+    <Compile Include="World\Battlefronts\Bounty\PlayerRVRGearDrop.cs" />
     <Compile Include="World\Battlefronts\Bounty\RewardPlayerKill.cs" />
     <Compile Include="World\Battlefronts\Bounty\RenownBandRVRPairingLock.cs" />
     <Compile Include="World\Battlefronts\Bounty\RenownBandRVRZoneLock.cs" />
