WIP changes for Fort/Keep items

--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -152,10 +152,11 @@
     <Compile Include="Database\World\Battlefront\BattleFrontKeepStatus.cs" />
     <Compile Include="Database\World\Battlefront\RVRAreaPolygon.cs" />
     <Compile Include="Database\World\Battlefront\RVRProgression - Copy.cs" />
+    <Compile Include="Database\World\Battlefront\RVRRewardFortItems.cs" />
     <Compile Include="Database\World\Battlefront\ZoneLockSummary.cs" />
     <Compile Include="Database\World\Battlefront\RVRProgression.cs" />
     <Compile Include="Database\World\Battlefront\RVRZoneLockReward.cs" />
-    <Compile Include="Database\World\Battlefront\RVRZoneLockItemOptionReward.cs" />
+    <Compile Include="Database\World\Battlefront\RVRRewardKeepItems.cs" />
     <Compile Include="Database\World\Chapters\Chapter_Info.cs" />
     <Compile Include="Database\World\Chapters\Chapter_Reward.cs" />
     <Compile Include="Database\World\Characters\CharacterInfo.cs" />
