--- a/HonorUpdater/App.config
+++ b/HonorUpdater/App.config
@@ -5,6 +5,8 @@
     </startup>
   <appSettings>
   <add key="WAR.ConnectionString" value="Server=127.0.0.1;Database=war_characters;Uid=root;Pwd=thetrooper;" />
+    <add key="ReduceHonorPointsPercent" value="5"/>
+  
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
